# kakun

./: Makefile  main.py  pyproject.toml
games_project_sankova/: pyproject.toml
games_project_sankova/VD_games/: cli.py
games_project_sankova/VD_games/scripts/: VD_even.py  VD_games.py
