[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games-project-sankova"
version = "0.1.0"
description = "Python package with games"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
VD-games = "games_project_sankova.VD_games.scripts.VD_games:main"
vd-even = "games_project_sankova.VD_games.scripts.VD_even:main"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N"]
ignore = ["N999"]
